Modified full-education to enable velocity template rendering.

--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -66,7 +66,7 @@
 	<div style="float: left"> $preamble </div>
 	<div style="float: left; margin-left: 1ex">
 		#if ($value.isSelfQuoting()) 
-			$value 
+			<span title="$value.literalType">$value</span> 
 		#else 
 			"$value.shortForm()"
 			#set ($lang = $value.language) 
