--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -1,3 +1,20 @@
+## 
+## This Velocity template renders the Elda result model in a way inspired
+## by the XSLT's HTML rendering but is deliberately not the same. Cycles in
+## the graph are handled by the template code rather than a pre-pass as
+## in the XML renderer. Property (chains) are added to the view by clicking
+## on an associated "+" icon; active views can be dropped by clicking on
+## the "viewing properties" scissors-icon. Viewed resources can be clicked
+## on to open up a new Elda URI with that resource as the selected item,
+## allowing the user to explore the dataset without the items all belonging
+## to the Elda base URI.
+##
+## These templates are limited examples, not complete rendering solutions;
+## one reason for providing the Velocity renderer is for developers to be
+## able to build renderers to their taste without having to rejig the
+## XSLT templates.
+##
+
 #set ($seen = $utils.newSet())
 #set ($nextlink = $thisPage.valueOf("xhv:next"))
 #set ($prevlink = $thisPage.valueOf("xhv:prev"))
@@ -10,6 +27,12 @@
 <img src="${resourceRoot}images/green/16x16/${name}.png" />
 #end
 
+##
+## cut the _properties variable (which has the value of the _properties
+## query parameter) at commas and put the results into the set
+## $_properties.
+##
+
 #set ($_properties = $utils.newSet())
 #foreach ($p in $vars['_properties'].toString().split(","))
     #if ($p.isEmpty()) #else 
@@ -20,6 +43,11 @@
 <html>
 #parse("page-head-shell.vm")
 <body>
+
+##
+## The top div has the logos (RDF, Epimorphics) and title text, each of
+## which is linked to a suitable target.
+##
 
 <div style="background: #dff; font-size: 2em; margin: 0.5ex; border-radius: 0.2ex">
 	<a href="http://en.wikipedia.org/wiki/Resource_Description_Framework">
@@ -40,12 +68,24 @@
 	<div style="clear: both"> </div>
 </div>
 
+##
+## Create a pipe-separated list of format names, linked with a URL
+## which is this page but rendered in that format.
+##
+
 <div class="formats-list">
 	#set ($pipe = "")
 	#foreach ($f in $formats)
 		$pipe #set ($pipe = " | ") <a href="$f.link">$f.name</a>
 	#end			
 </div>
+
+##
+## display of literals, with their language codes if they have one,
+## and their types unless they are 'self-quoting', and links to this
+## page but with filters set to have property values less/lesseq/
+## greater/greatereq/equals than this page.
+##
 
 #macro (tag, $property, $value)
 	"Select items with $property.shortForm() less than $value"
@@ -59,8 +99,6 @@
 		$symbol 
 	</a>
 #end
-
-## -------------------------------------------------------------------------
 
 #macro (showliteral,$preamble,$property,$value)
 	<div style="float: left"> $preamble </div>
@@ -85,13 +123,18 @@
 	<div style="clear: both"> </div>
 #end
 
-## -------------------------------------------------------------------------
+##
+## Two links for some resource value; the first is a link directly to
+## that value's URI and the second launches a new /item link with
+## _properties set to "*.*.*" as a reasonable properties view.
+##
 
 #macro(linkly,$value)
 <span>
 <a class="bold" href="$value.URI" id="$value.id"
 	title="Click to see document for this resource."
->#image("Document")</a></span>
+>#image("Document")
+</a></span>
 
 <span>
 #set ($macro.A = $utils.newSet())
@@ -102,15 +145,23 @@
 #set ($macro.changeProperties = $macro.base.change('', '_properties', $utils.join($macro.A,',') ))
 #set ($macro.changeAll = $macro.changeProperties.change('','resource', $value.URI.raw().replaceAll("#", "%23")))           
 
-## $rootPath/item.vhtml
-
 <a href="$macro.changeAll.URI"
 	title="Click to see properties of this resource."
 >$value.label</a>
 </span>
 #end
 
-## -------------------------------------------------------------------------
+
+## 
+## display the values of $item (initially one of the selected items). This
+## macro is recursive, hence the heavy use of $macro.* and $foreach.*
+## (clumsy but at least Velocity makes it /possible/). Properties with a
+## single value are special-cased so that the value is on the same line
+## as the property. Properties get two links: one for the "document" of
+## the property, and the other (marked "+") to add its chain to the 
+## set of marked property chains. Items that are in the 'seen' set have
+## been handled high up the value tree and so their properties are not shown.
+## 
 
 #macro(displayvalues,$chain,$item,$seen)
 	#set ($macro.unseen = $seen.add($item))
@@ -172,6 +223,14 @@
 	#if ($macro.unseen) #set ($ignored = $seen.remove($item)) #end
 #end
 
+##
+## Using tables for layout, we might be able to do away with this now
+## Left column is for search results, right column for tweaking the view.
+## Under the search results there's a list of local links to the selected
+## items, unless there is but one, and then an "item box" for each selected
+## item which displays the item and invokes 'displayvalues' to show its
+## properties.
+
 <table width="100%">
 <tr>
 <td width="70%" valign="top">
@@ -205,6 +264,9 @@
 	#end
 	</div>
 		
+	##
+	## display the items and their properties.
+	##
 	<div style="margin-left: 3ex">
 		#foreach ($item in $items) 
 			<div class="itembox">
@@ -216,25 +278,32 @@
 </div>
 
 </td>
+
+##
+## Show all the properties in _properties with a constructed link that
+## is this page but with that property removed from the _properties
+## query parameter's comma-separated value.
+##
+
 <td width="30%" valign="top">
-	<h2>other</h2>
+	<h2>viewing</h2>
 	
 	<div style="margin-left: 2ex">
 	
-	<div style="font-size: 2em; font-weight: bold"> properties </div>
-	
-	#foreach ($p in $_properties)
-		<div> 
-		
-		#set ($A = $utils.newSet())
-        #set ($ignored = $A.addAll($_properties))
-		#set ($ignored = $A.remove($p))
-		#set ($changed = $thisPage.change('', '_properties', $utils.join($A,',')))
-		
-		<a title='Click to remove this property chain from viewed properties.' href="$changed.URI">#image("Clipboard Cut")</a> $p
-        
-        </div>
-	#end
+    	<div style="font-size: 2em; font-weight: bold"> properties </div>
+    	
+    	#foreach ($p in $_properties)
+    		<div> 
+    		
+    		#set ($A = $utils.newSet())
+            #set ($ignored = $A.addAll($_properties))
+    		#set ($ignored = $A.remove($p))
+    		#set ($changed = $thisPage.change('', '_properties', $utils.join($A,',')))
+    		
+    		<a title='Click to remove this property chain from viewed properties.' href="$changed.URI">#image("Clipboard Cut")</a> $p
+            
+            </div>
+    	#end
 	
 	</div>
 	
@@ -242,8 +311,14 @@
 </tr>
 </table>
 	
-
 <hr class="hr-style">
+
+##
+## Show the SPARQL query that generates the selected item (unless this
+## is an item endpoint) and the SPARQL query that gets the view properties
+## (but that doesn't show the explicit property chains nor the label
+## query, alas).
+##
 
 <table id="queries" style="margin: 2ex" width="100%">
 <tr>
