--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
@@ -27,5 +27,94 @@ $(function() {
 })
 
 </script>	
+
+<style>
+    div[id="OpenLayers.Control.Attribution_2"] {right: 0; bottom: 0}
+</style>
+
+#if ($map_datasize > 0) 
+
+    <script src="${resourceRoot}/openlayers/OpenLayers.js"></script>
+    
+    <script src="http://www.openstreetmap.org/openlayers/OpenStreetMap.js"></script>
+    
+    <script type="text/javascript">
+    
+        function map_init() {
+              
+            var useMapQuest = false;
+            var useMapnik = !useMapQuest;
+            
+            var controls = [
+                new OpenLayers.Control.Attribution(),
+                new OpenLayers.Control.Navigation(),
+                new OpenLayers.Control.PanPanel(),
+                new OpenLayers.Control.ZoomPanel()
+                ]
+    
+            var map = new OpenLayers.Map("map" , {controls: controls});
+    
+            #set ($d = "$") ## BAH HUMBUG
+            var arrayOSM = [
+                "http://otile1.mqcdn.com/tiles/1.0.0/map/${d}{z}/${d}{x}/${d}{y}.jpg",
+                "http://otile2.mqcdn.com/tiles/1.0.0/map/${d}{z}/${d}{x}/${d}{y}.jpg",
+                "http://otile3.mqcdn.com/tiles/1.0.0/map/${d}{z}/${d}{x}/${d}{y}.jpg",
+                "http://otile4.mqcdn.com/tiles/1.0.0/map/${d}{z}/${d}{x}/${d}{y}.jpg"
+                ];
+                    
+            wgs84 = new OpenLayers.Projection("EPSG:4326");
+            
+            if (useMapQuest) map.addLayer(new OpenLayers.Layer.OSM("MapQuest-OSM Tiles", arrayOSM));
+            if (useMapnik) map.addLayer(new OpenLayers.Layer.OSM.Mapnik());
+    
+            // ==============================================================================
+    
+            var raw_bounds = new OpenLayers.Bounds()
+                    
+            var data = $datapoints
+            
+            var old_test_data = [
+                [-0.10611, 51.43420]
+                , [0.10611, 51.43420]
+                , [-0.09888, 51.45471]
+                , [-0.08199, 51.45478]
+                , [-0.08520, 51.43420]
+                , [-0.09728, 51.47514]
+                , [-0.10611, 51.49698]
+                , [-0.06789, 51.50045]
+                , [-0.05631, 51.47074]
+                , [-0.10337, 51.50150]
+                , [-0.07209, 51.44968]
+                ]
+    
+            for (var i = 0; i < data.length; i += 1) {
+                var di = data[i]
+                var d = new OpenLayers.LonLat(di[0], di[1]) 
+                raw_bounds.extend(d)
+            }
+    
+            var bounds = raw_bounds.transform(wgs84,map.getProjectionObject());
+            var zoom = map.getZoomForExtent(bounds);
+    
+            var center = bounds.getCenterLonLat() // .transform(wgs84,map.getProjectionObject())
+    
+            map.setCenter(center, zoom < 14 ? zoom : 14 );
+    
+            var markers = new OpenLayers.Layer.Markers("Markers");
+            map.addLayer(markers);
+    
+            var size = new OpenLayers.Size(32,32);
+            var offset = new OpenLayers.Pixel(-(size.w/2), -size.h);
+            var icon = new OpenLayers.Icon("${resourceRoot}/openlayers/img/marker.png", size, offset);
+    
+            for (var i = 0; i < data.length; i += 1) {
+                var di = data[i]
+                var pos = new OpenLayers.LonLat(di[0], di[1]).transform(wgs84,map.getProjectionObject())
+                markers.addMarker(new OpenLayers.Marker(pos, icon.clone()))
+            }
+        }
+    
+    </script>
+#end
 	
 </head>
