Made hidden but unhidable buttons & names uner the views for all their proeprty chains -- they can be selected to add to the 'properties' section of the page/URI.

--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
@@ -35,9 +35,22 @@ $(function() {
 <style>
 div.mapInfo {
     font-size: smaller
-    ; float: right
 }
+
+.hidden {
+	display: none
+}
+
 </style>
+
+<script type="text/javascript">
+
+function clickView(id) {
+	var v = document.getElementById(id)
+	v.className = (v.className == "" ? "hidden" : "") 
+}
+
+</script>
 
 #if ($map_datasize > 0) 
 
